--- a/src/components/WebAnalysisItem.css
+++ b/src/components/WebAnalysisItem.css
@@ -61,14 +61,14 @@
 }
 
 .chartContent .databasePart {
-  padding: 32px 26.5px 40px 41px;
+  padding: 32px 26.5px 39px 41px;
   width: 55%;
   display: flex;
   border-right: 2px solid rgba(149, 166, 184, 0.4);
 }
 
 .chartContent .casesPart {
-  padding: 32px 26.5px 40px 41px;
+  padding: 32px 26.5px 39px 41px;
   width: 45%;
   display: flex;
   align-items: center;
@@ -92,8 +92,11 @@
 }
 
 .descriptionItem {
-  padding: 28px 0 32px 0;
   border-top: 1px solid rgba(149, 166, 184, 0.1);
+}
+
+.casesPart .descriptionItem {
+  padding: 28px 0 32px 0;
 }
 
 .descriptionItemTitle {
